test/src/e2e_vm_tests/test_programs/should_fail/infinite_dependencies/src/a_dependency.sw
library;
mod a_dependency;
